完成了月报报表的功能

--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -63,7 +63,7 @@
                                             <th rowspan="2" style="text-align: center;padding-top:30px">本月</th>
                                             <th rowspan="2" style="text-align: center;padding-top:30px">本年度累计</th>
                                             <th rowspan="2" style="text-align: center;padding-top:30px">建设至今累计</th>
-                                            <th rowspan="2" style="text-align: center;padding-top:30px">备注</th>
+
                                         </tr>
                                         <tr>
                                             <th >合同内</th>
@@ -83,7 +83,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -95,7 +95,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -107,7 +107,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -119,7 +119,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -131,7 +131,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -143,7 +143,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -155,7 +155,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -167,7 +167,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td></td>
@@ -179,7 +179,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>Ⅱ</td>
@@ -191,7 +191,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>一</td>
@@ -203,7 +203,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12e33</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>二</td>
@@ -215,7 +215,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>1</td>
@@ -227,7 +227,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>2</td>
@@ -239,7 +239,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>三</td>
@@ -251,7 +251,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         <tr>
                                             <td>Ⅲ</td>
@@ -263,7 +263,7 @@
                                             <td class="center">12233</td>
                                             <td class="center">123</td>
                                             <td class="center">12ewqwrq1233</td>
-                                            <td class="center">123</td>
+
                                         </tr>
                                         </tbody>
 
@@ -367,7 +367,7 @@
                                         <li class=""><a data-toggle="tab" href="#tab-2"> <i class="fa fa-wrench"></i>工程量情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-3"> <i class="fa fa-book"></i>项目情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-4"> <i class="fa fa-file-text"></i>附件</a></li>
-                                        <li class=""><a data-toggle="modal" data-target="#data_table_modal"> <i class="fa fa-pie-chart"></i>月报表</a></li>
+                                        <li class=""><a data-toggle="modal" id="mr_table"> <i class="fa fa-pie-chart"></i>月报表</a></li>
                                     </ul>
                                     <div class="tab-content">
                                         <div id="tab-1" class="tab-pane active animated fadeInUp">
