--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Login 2</title>
+    <title>贵州水投·建设监管</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -23,22 +23,22 @@
         <div class="row">
 
             <div class="col-md-6">
-                <h2 class="font-bold">Welcome to IN+</h2>
+                <h2 class="font-bold">监管云（建设监管模块）</h2>
 
                 <p>
-                    Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
+                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 </p>
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 </p>
 
                 <p>
-                    When an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 </p>
 
                 <p>
-                    <small>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</small>
+                    <small>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</small>
                 </p>
 
             </div>
@@ -56,13 +56,13 @@
                         <h5 id="msg" th:text="${msg}"></h5>
 
                         <p class="text-muted text-center">
-                            <small>Do not have an account?</small>
+                            <small>enjoy</small>
                         </p>
-                        <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
-                        <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+                        <!--<a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>-->
+                        <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
                     </form>
                     <p class="m-t">
-                        <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small>
+                        <small>若您未注册过本系统，请联系管理员开通。</small>
                     </p>
                 </div>
             </div>
@@ -70,10 +70,10 @@
         <hr/>
         <div class="row">
             <div class="col-md-6">
-                Copyright Example Company
+                Copyright GUIZHOU SMART WATER CONSERVANCY TECHNOLOGY CO., LTD.
             </div>
             <div class="col-md-6 text-right">
-               <small>© 2014-2015</small>
+               <small>© 2018-2020</small>
             </div>
         </div>
     </div>
