用户操作日志ing...

--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:href="@{/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
+    <link th:href="@{/css/custom/bootstrap-switch.min.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -313,6 +314,11 @@
                                      下一月 <i class="fa fa-angle-double-right"> </i>
                                 </a>
 
+                            </div>
+                            <div class="col-lg-1">
+                                <a id="" class="btn btn-danger btn-facebook animation_select" data-toggle="modal" data-target="#approve_modal">
+                                    审批
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -633,7 +639,26 @@
 </div>
 
 
-
+<!--审批modal-->
+<div class="modal inmodal" id="approve_modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animated bounceInRight">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">关闭</span></button>
+                    <h1 class="modal-title">月 报 审 批</h1>
+                    <br>
+                    <input type="checkbox" name="my-checkbox" id="my-checkbox">
+            </div>
+            <div class="modal-body">
+                <div id="approve_input" class="form-group animated fadeIn" style="display:none;"><label style="font-size: 15px;">若不通过，请说明原因:</label> <textarea id="approve_area" rows="5" placeholder="填写内容请控制在250字以内。" class="form-control" maxlength="250"></textarea></div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" id="submit">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script th:src="@{js/plugins/metisMenu/jquery.metisMenu.js}"></script>
     <script th:src="@{js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
@@ -650,7 +675,7 @@
     <script th:src="@{/js/custom/jquery.mousewheel.min.js}"></script>
     <script th:src="@{/js/custom/project_monthly_report_show.js}"></script>
 
-
+    <script th:src="@{/js/custom/bootstrap-switch.min.js}"></script>
 </body>
 
 </html>
