--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,8 +95,16 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="css_animation.html"><i class="fa fa-magic"></i> <span
-                            class="nav-label">系统设置 </span><span class="label label-info pull-right">62</span></a>
+                    <a href="#"><i class="fa fa-magic"></i> <span
+                            class="nav-label">系统设置 </span><span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level collapse">
+                        <li>
+                            <a href="#">前期进度</a>
+                        </li>
+                        <li>
+                            <a href="#" id="operation_log">操作日志</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="landing_link">
                     <a target="_blank" href="landing.html"><i class="fa fa-star"></i> <span class="nav-label">Landing Page</span>
@@ -127,70 +135,39 @@
                     <li>
                         <span class="m-r-sm text-muted welcome-message">中小型骨干水源工程监管云</span>
                     </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-messages">
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a7.jpg">
-                                    </a>
-                                    <div>
-                                        <small class="pull-right">46h ago</small>
-                                        <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
-                                        <br>
-                                        <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
+                    <shiro:hasRole name="reporter">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                                <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-messages" id="feedback">
+                                <li>
+                                    <div class="dropdown-messages-box">
+                                        <a href="profile.html" class="pull-left">
+                                            <img alt="image" class="img-circle" src="img/a7.jpg">
+                                        </a>
+                                        <div>
+                                            <small class="pull-right">46h ago</small>
+                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
+                                            <br>
+                                            <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a4.jpg">
-                                    </a>
-                                    <div>
-                                        <small class="pull-right text-navy">5h ago</small>
-                                        <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica
-                                        Smith</strong>. <br>
-                                        <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/profile.jpg">
-                                    </a>
-                                    <div>
-                                        <small class="pull-right">23h ago</small>
-                                        <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-                                        <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="text-center link-block">
-                                    <a href="mailbox.html">
-                                        <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-bell"></i> <span class="label label-primary" id="countUnread"></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-alerts" id="notification_entrance">
+                                </li>
+                                <li class="divider"></li>
+                            </ul>
+                        </li>
+                    </shiro:hasRole>
+                    <shiro:hasRole name="checker">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                                <i class="fa fa-bell"></i> <span class="label label-primary" id="countUnread"></span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-alerts" id="notification_entrance">
 
-                        </ul>
-                    </li>
-
+                            </ul>
+                        </li>
+                    </shiro:hasRole>
 
                     <li>
                         <a href="/logout">
