--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     <link th:href="@{/css/plugins/sweetalert/sweetalert.css}" rel="stylesheet">
     <link th:href="@{/css/plugins/steps/jquery.steps.css}" rel="stylesheet">
     <link th:href="@{/css/custom/fileinput.css}"  rel="stylesheet" type="text/css">
-
+    <link th:href="@{/css/custom/enjoyhint.css}"  rel="stylesheet" type="text/css">
 </head>
 
 <body class="md-skin fixed-nav no-skin-config">
@@ -31,7 +31,7 @@
                         <span>
                             <img alt="image" class="img-circle" src="img/profile_small.jpg"/>
                         </span>
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                        <a id="person_menu" data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="clear">
                                 <span class="block m-t-xs" id="username">
                                     <strong class="font-bold">口口口口口</strong>
@@ -57,12 +57,15 @@
                 <li>
                     <a th:href="@{/index}"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
                 </li>
+                <li class="">
+                    <a id="help_page"><i class="fa fa-star"></i> <span class="nav-label">配置向导</span></a>
+                </li>
                 <li>
-                    <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">项目储备 </span><span
+                    <a id="menu_1" href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">项目储备 </span><span
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
                         <li>
-                        <a href="#">基本信息维护 <span class="fa arrow"></span></a>
+                        <a id="menu_2" href="#">基本信息维护 <span class="fa arrow"></span></a>
                             <ul class="nav nav-third-level">
                                 <li>
                                     <a href="#">前期进度</a>
@@ -1058,6 +1061,10 @@
                                                     </select>
                                                 </div>
                                                 <div class="form-group">
+                                                    <label>所在县</label><span style="color:red;"> *</span>
+                                                    <input id="county"  type="text" name="county" class="form-control number " maxlength="10">
+                                                </div>
+                                                <div class="form-group">
                                                     <label>经度</label><span style="color:red;"> *</span>
                                                     <input id="longitude"  type="text" name="longitude" class="form-control number required" maxlength="10">
                                                 </div>
@@ -1103,7 +1110,11 @@
                                                     <input id="location"  type="text" name="location" class="form-control required" maxlength="20">
                                                 </div>
                                                 <div class="form-group">
-                                                    <label>维度</label><span style="color:red;"> *</span>
+                                                    <label>项目来源</label><span style="color:red;"> *</span>
+                                                    <input id="projectSource"  type="text" name="projectSource" class="form-control number " maxlength="10">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>纬度</label><span style="color:red;"> *</span>
                                                     <input id="latitude"  type="text" name="latitude" class="form-control number required" maxlength="10">
                                                 </div>
                                                 <div class="form-group">
@@ -1137,14 +1148,6 @@
                                             </div>
                                         </div>
                                         <div class="hr-line-dashed"></div>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="form-group">
-                                                    <label>备注</label>
-                                                    <textarea id="remark" name="remark" class="form-control " maxlength="250" placeholder="填写内容在250字内"></textarea>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </fieldset>
 
                                     <h1><i class="fa fa-book"></i> 详细情况1</h1>
@@ -1240,39 +1243,56 @@
                                     <h1><i class="fa fa-book"></i> 详细情况2</h1>
                                     <fieldset>
                                         <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="form-group">
+                                                    <label>项目概况</label><span style="color:red;"> *</span>
+                                                    <textarea id="overview" name="overview" class="form-control " rows="5" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>工程任务及主要建筑物</label><span style="color:red;"> *</span>
+                                                    <textarea id="projectTask" name="projectTask" class="form-control " rows="3" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                </div>
+                                            </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group">
+                                                    <label>建设用地</label><span style="color:red;"> *</span>
+                                                    <textarea id="constructionLand" name="constructionLand" class="form-control " rows="3" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>土地复垦方案</label><span style="color:red;"> *</span>
+                                                    <textarea id="landReclamationPlan" name="landReclamationPlan" class="form-control " rows="3" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                </div>
+                                                <div class="form-group">
                                                     <label>单位工程数</label><span style="color:red;"> *</span>
-                                                    <input id="unitProjectAmount"  type="text" name="unitProjectAmount" class="form-control number required" maxlength="10">
+                                                    <input id="unitProjectAmount"  type="text" name="unitProjectAmount" class="form-control number " maxlength="10">
                                                 </div>
                                                 <div class="form-group">
                                                     <label>单位工程概况</label><span style="color:red;"> *</span>
                                                     <textarea id="unitProjectOverview" name="unitProjectOverview" class="form-control " rows="5" maxlength="250" placeholder="填写内容在250字内"></textarea>
                                                 </div>
-
-                                                <div class="form-group">
-                                                    <label> 分部工程数</label><span style="color:red;"> *</span>
-                                                    <input id="branchProjectAmount"  type="text" name="branchProjectAmount" class="form-control number required" maxlength="10">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>分布工程概况</label><span style="color:red;"> *</span>
-                                                    <textarea id="branchProjectOverview" name="branchProjectOverview" class="form-control" rows="5" maxlength="250" placeholder="填写内容在250字内"></textarea>
-                                                </div>
-
-
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group">
                                                     <label> 单元工程数</label><span style="color:red;"> *</span>
-                                                    <input id="cellProjectAmount"  type="text" name="cellProjectAmount" class="form-control number required" maxlength="10">
+                                                    <input id="cellProjectAmount"  type="text" name="cellProjectAmount" class="form-control number " maxlength="10">
                                                 </div>
                                                 <div class="form-group">
                                                     <label>单元工程概况</label><span style="color:red;"> *</span>
                                                     <textarea id="cellProjectOverview" name="cellProjectOverview" class="form-control" rows="5" maxlength="250" placeholder="填写内容在250字内"></textarea>
                                                 </div>
                                                 <div class="form-group">
+                                                    <label> 分部工程数</label><span style="color:red;"> *</span>
+                                                    <input id="branchProjectAmount"  type="text" name="branchProjectAmount" class="form-control number " maxlength="10">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>分布工程概况</label><span style="color:red;"> *</span>
+                                                    <textarea id="branchProjectOverview" name="branchProjectOverview" class="form-control" rows="5" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <div class="form-group">
                                                     <label>备注</label>
-                                                    <textarea id="mark" name="mark" class="form-control" rows="9" maxlength="250" placeholder="填写内容在250字内"></textarea>
+                                                    <textarea id="remark" name="remark" class="form-control" rows="3" maxlength="250" placeholder="填写内容在250字内"></textarea>
                                                 </div>
                                             </div>
                                         </div>
@@ -1286,7 +1306,7 @@
                                             <form enctype="multipart/form-data">
                                                 <div class="form-group">
                                                     <div class="file-loading">
-                                                        <input id="basic_info_file" type="file" multiple  data-overwrite-initial="false" data-min-file-count="1">
+                                                        <input id="uploadfile" name="uploadfile" type="file" multiple  data-overwrite-initial="false" data-min-file-count="1">
                                                     </div>
                                                 </div>
                                             </form>
@@ -1350,11 +1370,11 @@
 <!-- Jquery Validate -->
 <script th:src="@{/js/plugins/validate/jquery.validate.min.js}"></script>
 
-<script th:src="@{/js/custom/fileinput.min.js}" type="text/javascript"></script>
-<script src="https://cdn.bootcss.com/bootstrap-fileinput/4.3.5/js/locales/zh.min.js"></script>
-
-
+<script th:src="@{/js/custom/enjoyhint.min.js}" type="text/javascript"></script>
 <!-- custom -->
 <script th:src="@{/js/custom/index.js}"></script>
+
+<script th:src="@{/js/custom/fileinput.min.js}" type="text/javascript"></script>
+<script src="https://cdn.bootcss.com/bootstrap-fileinput/4.3.5/js/locales/zh.min.js"></script>
 </body>
 </html>
