--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,83 +1,118 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <meta charset="utf-8"/>
     <title>贵州水投·建设监管</title>
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"/>
+    <link rel="apple-touch-icon" href="pages/ico/60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="pages/ico/152.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta content="" name="description"/>
+    <meta content="" name="author"/>
+    <link th:href="@{/css/custom/pace-theme-flash.css}" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/font-awesome/css/font-awesome.css}" rel="stylesheet">
+    <link th:href="@{/css/custom/light.css}" rel="stylesheet">
+    <script type="text/javascript">
+        window.onload = function () {
+            // fix for windows 8
+            if (navigator.appVersion.indexOf("Windows NT 6.2") != -1)
+                document.head.innerHTML += '<link rel="stylesheet" type="text/css" th:href="@{/css/custom/windows.chrome.fix.css}" />'
+        }
+    </script>
 </head>
-
-<body class="gray-bg">
-
-    <div class="loginColumns animated fadeInDown">
-        <div class="row">
-
-            <div class="col-md-6">
-                <h2 class="font-bold">监管云（建设监管模块）</h2>
-
-                <p>
-                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                </p>
-
-                <p>
-                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                </p>
-
-                <p>
-                    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                </p>
-
-                <p>
-                    <small>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</small>
-                </p>
-
-            </div>
-            <div class="col-md-6">
-                <div class="ibox-content">
-                    <form class="m-t" role="form" method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+<body class="fixed-header menu-pin">
+<div class="login-wrapper ">
+    <!-- START Login Background Pic Wrapper-->
+    <div class="bg-pic">
+        <!-- START Background Pic-->
+        <img th:src="@{/img/wallpaper.jpg}"
+             data-src="assets/img/demo/new-york-city-buildings-sunrise-morning-hd-wallpaper.jpg"
+             data-src-retina="assets/img/demo/new-york-city-buildings-sunrise-morning-hd-wallpaper.jpg" alt=""
+             class="lazy">
+        <!-- END Background Pic-->
+        <!-- START Background Caption-->
+        <div class="bg-caption pull-bottom sm-pull-bottom text-white p-l-20 m-b-20">
+            <h2 class="semi-bold text-white">
+               水利云·监管云</h2>
+            <p class="small">
+                Copyright GUIZHOU SMART WATER CONSERVANCY TECHNOLOGY CO., LTD. © 2018-2020
+            </p>
+        </div>
+        <!-- END Background Caption-->
+    </div>
+    <!-- END Login Background Pic Wrapper-->
+    <!-- START Login Right Container-->
+    <div class="login-container bg-white">
+        <div class="p-l-50 m-l-20 p-r-50 m-r-20 p-t-50 m-t-30 sm-p-l-15 sm-p-r-15 sm-p-t-40">
+            <img th:src="@{/img/logo.png}" alt="logo" width="300" height="56">
+            <p id="msg" th:text="${msg}" class="p-t-35"></p>
+            <!-- START Login Form -->
+            <form id="form-login" class="p-t-15" role="form" method="post">
+                <!-- START Form Control-->
+                <div class="form-group form-group-default">
+                    <label>用户名</label>
+                    <div class="controls">
+                        <input type="text" class="form-control" name="username" placeholder="Username"
+                               required="required">
+                    </div>
+                </div>
+                <!-- END Form Control-->
+                <!-- START Form Control-->
+                <div class="form-group form-group-default">
+                    <label>密码</label>
+                    <div class="controls">
+                        <input type="password" class="form-control" name="password" placeholder="Credentials"
+                               required="required">
+                    </div>
+                </div>
+                <!-- START Form Control-->
+                <div class="row">
+                    <div class="col-md-6 no-padding sm-p-l-10">
+                        <div class="checkbox ">
+                            <input type="checkbox" value="1" id="checkbox1">
+                            <label for="checkbox1">记住我</label>
                         </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
-                        </div>
-
-
-                        <h5 id="msg" th:text="${msg}"></h5>
-
-                        <p class="text-muted text-center">
-                            <small>enjoy</small>
+                    </div>
+                    <div class="col-md-6 d-flex align-items-center justify-content-end">
+                        <a href="#" class="text-info small">
+                            <small>若您未注册过本系统，请联系管理员开通。</small>
+                        </a>
+                    </div>
+                </div>
+                <!-- END Form Control-->
+                <button class="btn btn-primary btn-cons m-t-10" type="submit">登 陆</button>
+            </form>
+            <!--END Login Form-->
+            <div class="pull-bottom sm-pull-bottom">
+                <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
+                    <div class="col-sm-3 col-md-2 no-padding">
+                        <img alt="" class="m-t-5" height="60" th:src="@{/img/2dcode.png}" width="60">
+                    </div>
+                    <div class="col-sm-8 p-l-30 m-t-10">
+                        <p>
+                            <small>
+                                扫码登陆 进入<a href="#" class="text-info">水利云</a>服务平台 或 本公司<a href="http://www.gzzhsl.com/" class="text-info">官网</a>
+                            </small>
                         </p>
-                        <!--<a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>-->
-                        <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
-                    </form>
-                    <p class="m-t">
-                        <small>若您未注册过本系统，请联系管理员开通。</small>
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <hr/>
-        <div class="row">
-            <div class="col-md-6">
-                Copyright GUIZHOU SMART WATER CONSERVANCY TECHNOLOGY CO., LTD.
-            </div>
-            <div class="col-md-6 text-right">
-               <small>© 2018-2020</small>
-            </div>
-        </div>
     </div>
+    <!-- END Login Right Container-->
+</div>
 
+<!-- BEGIN VENDOR JS -->
+<script th:src="@{/js/custom/pace.min.js}" type="text/javascript"></script>
 </body>
-
 </html>
