--- a/src/main/resources/templates/person_info.html
+++ b/src/main/resources/templates/person_info.html
@@ -37,6 +37,7 @@
         </ol>
     </div>
 </div>
+
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
@@ -79,14 +80,10 @@
                         <div class="form-group"><label class="col-sm-2 control-label">通讯地址</label>
                             <div class="col-sm-10"><input id="address" type="text" name="address" class="form-control required"></div>
                         </div>
-
-
-
-
                         <div id="person_info_ops_btns" class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button id="reset" class="btn btn-white" type="submit">清空</button>
-                                <button id="person_info_submit" class="btn btn-primary" type="submit">保存</button>
+                                <button id="reset" class="btn btn-white">清空</button>
+                                <button id="person_info_submit" class="btn btn-primary">保存</button>
                             </div>
                         </div>
                     </form>
