先存个档 基础信息重新审批环节

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1523,8 +1523,9 @@
 <script th:src="@{/js/custom/enjoyhint.min.js}" type="text/javascript"></script>
 <!-- custom -->
 <script th:src="@{/js/custom/index.js}"></script>
-
+<script th:src="@{/js/custom/websocket_plugin.js}"></script>
 <script th:src="@{/js/custom/fileinput.min.js}" type="text/javascript"></script>
 <script src="https://cdn.bootcss.com/bootstrap-fileinput/4.3.5/js/locales/zh.min.js"></script>
+
 </body>
 </html>
