基本完成基本信息的报送审批功能
下一步需要进一步完善该模块 另外加上实时提醒的功能

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,6 +85,9 @@
                                 <li>
                                     <a href="#">参建单位</a>
                                 </li>
+                                <li>
+                                    <a id="basic_info_repeat1" data-toggle="tooltip" data-placement="bottom" title="点击后重新填报！"><i class="fa fa-repeat fa-lg"></i></a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -1018,8 +1021,7 @@
 
 
 <!--水库基本信息填报modal-->
-<div class="modal fade" id="base_info_modal" data-backdrop="static" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" style="max-height:95%;">
+<div class="modal fade" id="base_info_modal" data-backdrop="static" tabindex="-1" role="dialog" ria-labelledby="myModalLabel" style="max-height:95%;">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -1146,7 +1148,6 @@
                                                     <input id="utilizablCapacity" type="text" name="utilizablCapacity"
                                                            class="form-control number required" maxlength="10">
                                                 </div>
-
                                                 <div class="form-group">
                                                     <label>枢纽工程是否完工（是/否）
                                                     </label><span style="color:red;"> *</span>
@@ -1169,12 +1170,10 @@
                                                         <option>否</option>
                                                     </select>
                                                 </div>
-
                                             </div>
                                         </div>
                                         <div class="hr-line-dashed"></div>
                                     </fieldset>
-
                                     <h1><i class="fa fa-book"></i> 详细情况1</h1>
                                     <fieldset>
                                         <div class="row">
@@ -1285,11 +1284,9 @@
                                                            name="localAccumulativePayment"
                                                            class="form-control number required" maxlength="10">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </fieldset>
-
                                     <h1><i class="fa fa-book"></i> 详细情况2</h1>
                                     <fieldset>
                                         <div class="row">
@@ -1398,7 +1395,6 @@
 </div>
 
 <!--个人信息modal-->
-
 <div class="modal fade" id="person_info_modal" data-backdrop="static" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" style="max-height:95%;">
     <div class="modal-dialog modal-lg" role="document">
@@ -1457,7 +1453,6 @@
                                 </div>
                             </div>
                         </form>
-
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <h3 id="person_info_rt_msg"></h3>
